src/objects/MessageItem__c.object
<CustomObject>
    <description>Reports 5 item for month</description>
    <fields>
        <fullName>Message10__c</fullName>
        <label>連絡事項１０</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message11__c</fullName>
        <label>連絡事項１１</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message12__c</fullName>
        <label>連絡事項１２</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageRich__c</fullName>
        <label>連絡事項(リッチ)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ShopCodeRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipLabel>連絡事項</relationshipLabel>
        <relationshipName>MessageShopCodeRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>連絡事項</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>連絡事項名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DuplicationNameChk</fullName>
        <active>true</active>
        <errorConditionFormula>VLOOKUP(
$ObjectType.MessageItem__c.Fields.Id,
$ObjectType.MessageItem__c.Fields.Name,
Name) &lt;&gt; Id</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>該当年月にすでに存在するため、重複登録できません</errorMessage>
    </validationRules>
</CustomObject>